--- a/frontend/my-movies-app/src/components/moviesList/MovieModal.css
+++ b/frontend/my-movies-app/src/components/moviesList/MovieModal.css
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 70%;
     background-color: rgba(0, 0, 0, 0.6);
     display: flex;
     justify-content: center;
@@ -18,10 +18,11 @@
     padding: 20px;
     border-radius: 10px;
     width: 80%;
-    max-width: 500px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     position: relative;
     animation: fadeIn 0.3s ease-in-out;
+    display: flex;
+
   }
   
   /* Fade-in animation for the modal */
@@ -61,11 +62,13 @@
   .modal-content img {
     display: block;
     margin: 0 auto;
+    padding: 20px;
   }
   
   .modal-content p {
-    margin: 10px 0;
+    margin: 10px 10px;
     font-size: 14px;
     line-height: 1.5;
+
   }
   
